deploy/hello/service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: daronenko/hello:latest
        name: hello
        ports:
        - containerPort: 8080
          name: hello
