deploy/hello/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: NodePort
  ports:
  - name: hello
    port: 80
    targetPort: 8080
    # nodePort: 31000
  selector:
    app: hello
