deploy/hello/service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: deploy.local
    http:
      paths:
      - path: /api/hello(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello
            port:
              number: 80
